syntax="proto3";
option java_package="com.grpc.course.handson";
option java_multiple_files=true;

message EmailCredentials{
  string email=1;
  string password=2;
}

message PhoneCredentials{
  int32 number=1;
  int32 code=2;
}

message Credentials{
  oneof mode{
    EmailCredentials emailMode=1;
    PhoneCredentials phoneMode=2;
  }
}